Switch to using @testing-library/dom

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -109,6 +109,8 @@
     "@storybook/addon-links": "^5.1.8",
     "@storybook/addons": "^5.1.8",
     "@storybook/react": "^5.1.8",
+    "@testing-library/dom": "^6.1.0",
+    "@testing-library/react": "^9.1.3",
     "@types/chai": "^4.1.4",
     "@types/jest": "^24.0.13",
     "@types/jsdom": "^12.2.0",
@@ -131,13 +133,11 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.8",
-    "dom-testing-library": "^3.13.0",
     "graphql-tools": "^4.0.4",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
     "react-test-renderer": "16.8.3",
-    "react-testing-library": "^3.0.2",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
     "webpack-cli": "^3.3.4"
