--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -73,6 +73,7 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^6.1.0",
     "@types/chai": "^4.1.4",
     "@types/jest": "^24.0.13",
     "@types/jsdom": "^12.2.0",
@@ -89,7 +90,6 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
-    "dom-testing-library": "^3.13.0",
     "graphql-tools": "^4.0.4",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
