--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -56,6 +56,7 @@
     "expo-keep-awake": "^6.0.0",
     "expo-localization": "^6.0.0",
     "expo-secure-store": "^6.0.0",
+    "expo-web-browser": "^6.0.0",
     "extract-files": "^5.0.0",
     "filesize": "^3.5.11",
     "graphql": "^14.3.1",
