--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -98,6 +98,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.2",
+    "objection": "^2.0.7",
     "lerna": "^2.5.1",
     "lint-staged": "^7.0.4",
     "lodash": "^4.17.4",
