--- a/package.json
+++ b/package.json
@@ -158,7 +158,7 @@
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.1",
     "source-list-map": "^2.0.0",
-    "style-loader": "^1.0.0",
+    "style-loader": "^1.0.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "ts-loader": "^4.5.0",
@@ -196,8 +196,8 @@
     "immutability-helper": "2.8.1",
     "graphql": "14.3.1",
     "iterall": "^1.2.2",
+    "sharp": "^0.23.4",
     "upath": "^1.1.0",
-    "style-loader": "^1.0.0",
     "watchpack": "https://github.com/Globegitter/watchpack"
   }
 }
