Perform minor package.json fixes

--- a/modules/look/client-angular/package.json
+++ b/modules/look/client-angular/package.json
@@ -1,10 +1,5 @@
 {
   "name": "@gqlapp/look-client-angular",
   "version": "0.1.0",
-  "private": true,
-  "peerDependenciesMeta": {
-    "@angular/animations": "*",
-    "@angular/cdk": "*",
-    "@angular/material": "*"
-  }
+  "private": true
 }
