--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -54,6 +54,11 @@
     "@gqlapp/reports-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
     "@loadable/component": "^5.10.1",
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-knobs": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/addons": "^5.3.14",
+    "@storybook/react": "^5.3.14",
     "antd": "^3.19.8",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
@@ -107,10 +112,6 @@
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.8",
-    "@storybook/addon-links": "^5.1.8",
-    "@storybook/addons": "^5.1.8",
-    "@storybook/react": "^5.1.8",
     "@testing-library/dom": "^6.1.0",
     "@testing-library/react": "^9.1.3",
     "@types/chai": "^4.1.4",
@@ -118,7 +119,8 @@
     "@types/jsdom": "^12.2.0",
     "@types/loadable__component": "^5.9.0",
     "@types/lodash": "^4.14.112",
-    "@types/react": "^16.4.6",
+    "@types/node": "^13.7.6",
+    "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^5.0.6",
     "@types/react-native": "^0.55.7",
