--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -54,11 +54,6 @@
     "@gqlapp/reports-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
     "@loadable/component": "^5.10.1",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-knobs": "^5.3.14",
-    "@storybook/addon-links": "^5.3.14",
-    "@storybook/addons": "^5.3.14",
-    "@storybook/react": "^5.3.14",
     "antd": "^3.19.8",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
@@ -112,6 +107,13 @@
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-knobs": "^5.3.14",
+    "@storybook/addon-links": "^5.3.14",
+    "@storybook/addon-storysource": "^5.3.14",
+    "@storybook/addons": "^5.3.14",
+    "@storybook/react": "^5.3.14",
+    "@storybook/source-loader": "^5.3.14",
     "@testing-library/dom": "^6.1.0",
     "@testing-library/react": "^9.1.3",
     "@types/chai": "^4.1.4",
