--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -146,6 +146,7 @@
     "react-test-renderer": "16.9.0",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
+    "storybook-addon-locale": "^0.3.0",
     "webpack-cli": "^3.3.4"
   },
   "optionalDependencies": {
