--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "lerna run --scope={server,client,mobile} --parallel build --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
-    "watch": "lerna run --scope={server,client} --parallel watch --stream",
+    "watch": "lerna run --scope={server,client,gatsby} --parallel watch --stream",
     "watch:vue": "cross-env SSR=false lerna run --scope={server,client-vue} --parallel watch --stream",
     "watch:angular": "cross-env SSR=false lerna run --scope={server,client-angular} --parallel watch --stream",
     "watch:android": "npm-run-all --parallel watch-server watch-android",
@@ -91,22 +91,22 @@
   },
   "devDependencies": {
     "@alienfast/i18next-loader": "^1.0.15",
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-destructuring": "^7.0.0",
-    "@babel/plugin-transform-for-of": "^7.0.0",
-    "@babel/plugin-transform-regenerator": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/cli": "^7.8.0",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.0",
+    "@babel/plugin-proposal-decorators": "^7.8.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.0",
+    "@babel/plugin-transform-destructuring": "^7.8.0",
+    "@babel/plugin-transform-for-of": "^7.9.0",
+    "@babel/plugin-transform-regenerator": "^7.8.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-flow": "^7.9.0",
+    "@babel/preset-react": "^7.9.0",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.0",
     "@loadable/babel-plugin": "^5.10.0",
     "@loadable/webpack-plugin": "^5.7.1",
     "autoprefixer": "^9.5.0",
