--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "yarn": ">= 1.0.0"
+    "pm": "yarn@2.0.0-rc.32"
   },
   "scripts": {
-    "build": "lerna run --scope={server,client,mobile} --parallel build --stream",
+    "build": "lerna run --scope='{server,client,mobile}' --parallel build --stream",
     "clean": "lerna run clean --stream",
     "start": "lerna run --scope=server start --stream",
-    "watch": "lerna run --scope={server,client} --parallel watch --stream",
-    "watch:vue": "cross-env SSR=false lerna run --scope={server,client-vue} --parallel watch --stream",
-    "watch:angular": "cross-env SSR=false lerna run --scope={server,client-angular} --parallel watch --stream",
+    "watch": "lerna run --scope='{server,client}' --parallel watch --stream",
+    "watch:vue": "cross-env SSR=false lerna run --scope='{server,client-vue}' --parallel watch --stream",
+    "watch:angular": "cross-env SSR=false lerna run --scope='{server,client-angular}' --parallel watch --stream",
     "watch:android": "npm-run-all --parallel watch-server watch-android",
     "watch:ios": "npm-run-all --parallel watch-server watch-ios",
     "watch-android": "yarn workspace mobile watch:android",
@@ -120,6 +120,7 @@
     "babel-preset-vue": "^2.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "core-js": "^3.1.3",
+    "cross-env": "^5.1.8",
     "css-loader": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
