--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-universal-starter-kit",
   "private": true,
-  "cacheDirectories": [],
+  "cacheDirectories": ["ignored"],
   "version": "1.0.0",
   "engines": {
     "pm": "yarn@2.0.0-rc.32"
