added graphQL schema for register/login/actions with password added authentication module implemented generating jwt

--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -41,7 +41,8 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-actuator'
-        compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
+        implementation 'org.springframework.boot:spring-boot-starter-aop'
+        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
         //Lombok
         compileOnly "org.projectlombok:lombok:1.18.12"
@@ -77,6 +78,7 @@ project(':app') {
     dependencies {
         implementation project(':counter')
         implementation project(':user')
+        implementation project(':authentication')
     }
     bootJar {
         enabled = true
