--- a/packages/server-java/settings.gradle
+++ b/packages/server-java/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'server-java'
-include ':app', ':core', ':counter', ':user'
+include ':app', ':core', ':counter', ':user', ':authentication'
 
 project(':core').projectDir = new File('../../modules/core/server-java')
 project(':counter').projectDir = new File('../../modules/counter/server-java')
 project(':user').projectDir = new File('../../modules/user/server-java')
+project(':authentication').projectDir = new File('../../modules/authentication/server-java')
