Uses the same react package versions everywhere

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -85,10 +85,10 @@
     "query-string": "^6.8.3",
     "react": "16.11.0",
     "react-apollo": "^3.0.0",
-    "react-art": "^16.11.0",
+    "react-art": "16.11.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^16.11.0",
+    "react-dom": "16.11.0",
     "react-dropzone": "^4.2.3",
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.1",
