--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -107,11 +107,13 @@
     "compression": "^1.7.1",
     "connect": "^3.6.5",
     "cross-env": "^5.1.1",
+    "eslint": "^5.16.0",
     "exp": "^57.2.1",
     "expo-react-native-adapter": "^3.0.1",
     "expo-yarn-workspaces": "^1.2.1",
     "freeport-async": "^1.1.1",
     "image-size": "^0.6.2",
+    "jest": "^26.2.2",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
@@ -119,8 +121,5 @@
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
     "ws": "^5.1.1"
-  },
-  "peerDependencies": {
-    "eslint": "*"
   }
 }
