--- a/packages/client-angular/package.json
+++ b/packages/client-angular/package.json
@@ -78,11 +78,10 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
+    "eslint": "^5.16.0",
     "graphql-tools": "^4.0.4",
+    "jest": "^26.2.2",
     "rimraf": "^2.6.2"
-  },
-  "peerDependencies": {
-    "eslint": "*"
   },
   "browserslist": {
     "development": [
