--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -83,12 +83,12 @@
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
     "query-string": "^6.8.3",
-    "react": "16.9.0",
+    "react": "16.11.0",
     "react-apollo": "^3.0.0",
-    "react-art": "^16.9.0",
+    "react-art": "16.11.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "16.11.0",
     "react-dropzone": "^4.2.3",
     "react-ga": "^2.3.5",
     "react-helmet": "^5.2.1",
@@ -139,11 +139,13 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.8",
+    "eslint": "^5.16.0",
     "graphql-tools": "^4.0.4",
+    "jest": "^26.2.2",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "16.9.0",
+    "react-test-renderer": "16.11.0",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
     "storybook-addon-locale": "^0.3.0",
@@ -153,7 +155,7 @@
     "@expo/vector-icons": "^10.0.6",
     "expo": "^36.0.1",
     "native-base": "^2.13.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.11.0",
@@ -163,9 +165,6 @@
     "react-native-simple-picker": "^3.1.1",
     "react-navigation": "^3.11.1",
     "uuid": "^3.3.2"
-  },
-  "peerDependencies": {
-    "eslint": "*"
   },
   "browserslist": {
     "development": [
