--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -112,12 +112,12 @@
     "performance-now": "^2.1.0",
     "pg": "^7.4.0",
     "prop-types": "^15.6.0",
-    "react": "^16.9.0",
+    "react": "16.11.0",
     "react-apollo": "^3.0.0",
-    "react-art": "^16.9.0",
+    "react-art": "16.11.0",
     "react-cookie": "^2.2.0",
     "react-debounce-input": "^3.1.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "16.11.0",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
@@ -161,22 +161,18 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cross-env": "^5.1.1",
+    "eslint": "^5.16.0",
     "glob": "^7.1.4",
     "ip": "^1.1.5",
+    "jest": "^26.2.2",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.19.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
-    "react-test-renderer": "^16.9.0",
+    "react-test-renderer": "16.11.0",
     "request": "^2.83.0",
     "resolve-url-loader": "^2.2.1",
     "rimraf": "^2.6.2",
     "ws": "^5.1.1"
-  },
-  "peerDependencies": {
-    "eslint": "*"
-  },
-  "resolutions": {
-    "graphql-resolve-batch/graphql": "14.1.1"
   }
 }
