Adds dynamic loading of yarn plugins

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,15 @@
-yarnPath: .pmm.js
-nodeLinker: node-modules
-enableGlobalCache: true
 compressionLevel: 0
+
+enableGlobalCache: true
+
 lockfileFilename: yarn2.lock
+
+nodeLinker: node-modules
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .pmm.js
