--- a/modules/user/server-java/build.gradle
+++ b/modules/user/server-java/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     implementation project(':core')
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation project(':authentication')
 }
