--- a/Dockerfile-java
+++ b/Dockerfile-java
@@ -3,7 +3,7 @@ COPY ./packages/server-java ./packages/server-java
 COPY ./modules ./modules
 
 WORKDIR ./packages/server-java
-RUN ./gradlew clean build
+RUN ./gradlew clean bootJar
 
 FROM openjdk:11-jre-slim
 WORKDIR /server-java/
