--- a/modules/authentication/server-java/build.gradle
+++ b/modules/authentication/server-java/build.gradle
@@ -1,8 +1,5 @@
-plugins {
-    id 'java-library'
-}
-
 dependencies {
+    implementation project(':core')
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
