identify mailer module in settings.gradle

--- a/packages/server-java/settings.gradle
+++ b/packages/server-java/settings.gradle
@@ -5,3 +5,4 @@ project(':core').projectDir = new File('../../modules/core/server-java')
 project(':counter').projectDir = new File('../../modules/counter/server-java')
 project(':user').projectDir = new File('../../modules/user/server-java')
 project(':authentication').projectDir = new File('../../modules/authentication/server-java')
+project(':mailer').projectDir = new File('../../modules/mailer/server-java')
