added registration confirm functionality

--- a/modules/user/server-java/build.gradle
+++ b/modules/user/server-java/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation project(':core')
     implementation project(':authentication')
+    implementation project(':mailer')
 }
