implemented contact module

--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -79,6 +79,7 @@ project(':app') {
         implementation project(':user')
         implementation project(':authentication')
         implementation project(':mailer')
+        implementation project(':contact')
     }
     bootJar {
         enabled = true
