--- a/modules/mailer/server-java/build.gradle
+++ b/modules/mailer/server-java/build.gradle
@@ -2,4 +2,6 @@ dependencies {
     implementation project(':core')
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    compile group: 'com.sun.mail', name: 'jakarta.mail', version: '1.6.5'
+
 }
