implemented upload module

--- a/packages/server-java/app/src/main/resources/application.yml
+++ b/packages/server-java/app/src/main/resources/application.yml
@@ -28,6 +28,10 @@ spring:
           auth: true
           starttls:
             enable: true
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 graphql:
   servlet:
     exception-handlers-enabled: true
