implemented post module

--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -81,6 +81,7 @@ project(':app') {
         implementation project(':mailer')
         implementation project(':contact')
         implementation project(':upload')
+        implementation project(':post')
     }
     bootJar {
         enabled = true
