implemented reports module

--- a/packages/server-java/settings.gradle
+++ b/packages/server-java/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'server-java'
-include ':app', ':core', ':counter', ':user', ':authentication', 'mailer', 'contact', 'upload', 'post', 'chat'
+include ':app', ':core', ':counter', ':user', ':authentication', 'mailer', 'contact', 'upload', 'post', 'chat', 'reports'
 
 project(':core').projectDir = new File('../../modules/core/server-java')
 project(':counter').projectDir = new File('../../modules/counter/server-java')
@@ -10,3 +10,4 @@ project(':contact').projectDir = new File('../../modules/contact/server-java')
 project(':upload').projectDir = new File('../../modules/upload/server-java')
 project(':post').projectDir = new File('../../modules/post/server-java')
 project(':chat').projectDir = new File('../../modules/chat/server-java')
+project(':reports').projectDir = new File('../../modules/reports/server-java')
