--- a/packages/server-java/build.gradle
+++ b/packages/server-java/build.gradle
@@ -83,6 +83,7 @@ project(':app') {
         implementation project(':upload')
         implementation project(':post')
         implementation project(':chat')
+        implementation project(':reports')
     }
     bootJar {
         enabled = true
