--- a/modules/user/server-java/build.gradle
+++ b/modules/user/server-java/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     implementation project(':core')
-    implementation project(':authentication')
+    api project(':authentication')
     implementation project(':mailer')
 }
