--- a/packages/server-java/app/src/main/resources/application.yml
+++ b/packages/server-java/app/src/main/resources/application.yml
@@ -32,6 +32,8 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
+  messages:
+    basename: i18n/messages
 graphql:
   servlet:
     exception-handlers-enabled: true
