--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ignored"
   ],
   "version": "1.0.0",
-  "pm": "yarn@2.1.1",
+  "pm": "yarn@3.0.0-rc.1",
   "scripts": {
     "build": "lerna run --scope='{server,client,mobile}' --parallel build --stream",
     "clean": "lerna run clean --stream",
