--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -91,14 +91,14 @@
     "react-dom": "16.11.0",
     "react-dropzone": "^4.2.3",
     "react-ga": "^2.3.5",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.0.0",
     "react-i18next": "^10.12.2",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-stripe-elements": "^1.2.1",
     "react-transition-group": "^2.3.0-beta.0",
-    "reactstrap": "^5.0.0-beta",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.2",
     "sourcemapped-stacktrace": "^1.1.8",
@@ -124,7 +124,7 @@
     "@types/node": "^13.7.6",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.0",
-    "@types/react-helmet": "^5.0.6",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-native": "^0.55.7",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.4",
