--- a/package.json
+++ b/package.json
@@ -190,7 +190,9 @@
     "expo": "^38.0.0",
     "inquirer": "^6.2.2",
     "lodash": "^4.17.11",
-    "opencollective": "^1.0.3"
+    "opencollective": "^1.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "resolutions": {
     "fbjs": "^1.0.0",
