Updates Yarn and basic deps

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,6 +5,7 @@ enableGlobalCache: true
 lockfileFilename: yarn2.lock
 
 nodeLinker: node-modules
+nmMode: hardlinks-local
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
