--- a/package.json
+++ b/package.json
@@ -193,14 +193,8 @@
     "opencollective": "^1.0.3"
   },
   "resolutions": {
-    "fbjs": "^1.0.0",
+    "card-validator": "8.1.1",
     "hard-source-webpack-plugin": "https://github.com/sysgears/hard-source-webpack-plugin",
-    "kleur": "^3.0.3",
-    "immutability-helper": "2.8.1",
-    "graphql": "14.3.1",
-    "iterall": "^1.2.2",
-    "sharp": "^0.23.4",
-    "upath": "^1.1.0",
     "watchpack": "https://github.com/Globegitter/watchpack"
   }
 }
