--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -83,7 +83,7 @@
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
     "query-string": "^6.8.3",
-    "react": "16.11.0",
+    "react": "17.0.2",
     "react-apollo": "^3.0.0",
     "react-art": "16.11.0",
     "react-cookie": "^2.2.0",
@@ -153,9 +153,9 @@
   },
   "optionalDependencies": {
     "@expo/vector-icons": "^10.0.6",
-    "expo": "^36.0.1",
+    "expo": "^44.0.0",
     "native-base": "^2.13.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "0.64.3",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.11.0",
