Update all modules except chat, user and payments

--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -5,6 +5,7 @@
     "icon": "../../app.png",
     "version": "1.0.0",
     "slug": "apollo-universal-starter-kit",
+    "sdkVersion": "44.0.0",
     "ios": {
       "bundleIdentifier": "com.sysgears.apollokit"
     },
