--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -153,6 +153,7 @@
   },
   "optionalDependencies": {
     "@expo/vector-icons": "^10.0.6",
+    "@react-navigation/native": "^6.0.7",
     "expo": "^44.0.0",
     "native-base": "^2.13.5",
     "react-native": "0.64.3",
@@ -162,8 +163,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
-    "react-native-simple-picker": "^3.1.1",
-    "react-navigation": "^3.11.1",
+    "react-native-simple-picker": "^3.1.3",
     "uuid": "^3.3.2"
   },
   "browserslist": {
