--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -38,6 +38,9 @@
   "license": "MIT",
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.6.4",
@@ -84,11 +87,8 @@
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
     "react-native-reanimated": "~2.3.1",
-    "react-native-simple-picker": "^3.1.1",
+    "react-native-simple-picker": "^3.1.3",
     "react-native-swipe-list-view": "^2.0.0",
-    "react-navigation": "^4.4.4",
-    "react-navigation-drawer": "^2.7.1",
-    "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "subscriptions-transport-ws": "^0.9.16"
