--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -54,12 +54,11 @@
     "expo-app-loading": "^1.3.0",
     "expo-cli": "^5.0.3",
     "expo-constants": "~13.0.1",
-    "expo-file-system": "~13.1.2",
+    "expo-file-system": "~13.1.4",
     "expo-font": "^10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-keep-awake": "^10.0.1",
     "expo-localization": "~12.0.0",
-    "expo-permissions": "~13.1.0",
     "expo-secure-store": "~11.1.0",
     "expo-web-browser": "~10.1.0",
     "extract-files": "^5.0.0",
@@ -87,6 +86,7 @@
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
     "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-simple-picker": "^3.1.3",
     "react-native-swipe-list-view": "^2.0.0",
     "react-redux": "^7.2.6",
