--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -52,6 +52,7 @@
     "apollo-upload-client": "^10.0.0",
     "expo": "^44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-camera": "~12.2.0",
     "expo-cli": "^5.0.3",
     "expo-constants": "~13.0.1",
     "expo-file-system": "~13.1.4",
