Upgrade to Expo SDK 44 (#1220)
* Updates Yarn and basic deps

* Upgrade to Expo SDK 44

* Update all modules except chat, user and payments

* Implements login/logout flow for React Native

* Implements login/logout flow for React Native

* Implements profile React Native screens

* Implements all remaining RN users screens

* Updates initial route logic

* Update chat module and fix all lint warnings

* Enable RN payments

* Removes "exp" dependency

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -83,7 +83,7 @@
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
     "query-string": "^6.8.3",
-    "react": "16.11.0",
+    "react": "17.0.2",
     "react-apollo": "^3.0.0",
     "react-art": "16.11.0",
     "react-cookie": "^2.2.0",
@@ -153,17 +153,17 @@
   },
   "optionalDependencies": {
     "@expo/vector-icons": "^10.0.6",
-    "expo": "^36.0.1",
+    "@react-navigation/native": "^6.0.7",
+    "expo": "^44.0.0",
     "native-base": "^2.13.5",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "0.64.3",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
-    "react-native-gifted-chat": "^0.11.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
-    "react-native-simple-picker": "^3.1.1",
-    "react-navigation": "^3.11.1",
+    "react-native-simple-picker": "^3.1.3",
     "uuid": "^3.3.2"
   },
   "browserslist": {
