--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ignored"
   ],
   "version": "1.0.0",
-  "pm": "yarn@3.0.0-rc.2",
+  "pm": "yarn@3.2.0-rc.12",
   "scripts": {
     "build": "lerna run --scope='{server,client,mobile}' --parallel build --stream",
     "clean": "lerna run clean --stream",
@@ -25,7 +25,6 @@
     "seed": "lerna run --scope=server seed --stream",
     "migrate": "lerna run --scope=server migrate",
     "rollback": "lerna run --scope=server rollback",
-    "exp": "yarn --cwd packages/mobile exp",
     "exp-publish": "lerna run --scope=mobile exp-publish --stream",
     "test": "yarn tests && yarn lint",
     "tests": "lerna run --parallel tests --stream",
@@ -149,7 +148,7 @@
     "lint-staged": "^7.1.2",
     "mini-css-extract-plugin": "^0.4.1",
     "node-hmr-plugin": "^1.0.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "openurl": "^1.1.1",
     "postcss-loader": "^3.0.0",
@@ -187,20 +186,13 @@
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
-    "expo": "^38.0.0",
     "inquirer": "^6.2.2",
     "lodash": "^4.17.11",
     "opencollective": "^1.0.3"
   },
   "resolutions": {
-    "fbjs": "^1.0.0",
+    "card-validator": "8.1.1",
     "hard-source-webpack-plugin": "https://github.com/sysgears/hard-source-webpack-plugin",
-    "kleur": "^3.0.3",
-    "immutability-helper": "2.8.1",
-    "graphql": "14.3.1",
-    "iterall": "^1.2.2",
-    "sharp": "^0.23.4",
-    "upath": "^1.1.0",
     "watchpack": "https://github.com/Globegitter/watchpack"
   }
 }
