--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -5,6 +5,7 @@
     "icon": "../../app.png",
     "version": "1.0.0",
     "slug": "apollo-universal-starter-kit",
+    "sdkVersion": "44.0.0",
     "ios": {
       "bundleIdentifier": "com.sysgears.apollokit"
     },
@@ -12,20 +13,7 @@
       "package": "com.sysgears.apollokit"
     },
     "packagerOpts": {
-      "config": "metro.config.js",
-      "sourceExts": [
-        "native.tsx",
-        "native.jsx",
-        "native.ts",
-        "native.js",
-        "jsx",
-        "js",
-        "json",
-        "ts",
-        "tsx",
-        "graphql",
-        "gql"
-      ]
+      "config": "metro.config.js"
     }
   }
 }
