--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -16,7 +16,6 @@
     "watch": "expo start",
     "watch:android": "expo start --android",
     "watch:ios": "expo start --ios",
-    "postinstall": "expo-yarn-workspaces postinstall",
     "cli": "node ../../tools/cli"
   },
   "repository": {
@@ -38,7 +37,10 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/drawer": "^6.1.8",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "apollo-cache-inmemory": "1.4.2",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.6.4",
@@ -48,17 +50,18 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.3",
     "apollo-upload-client": "^10.0.0",
-    "expo": "^38.0.0",
-    "expo-cli": "^3.23.3",
-    "expo-constants": "~9.1.1",
-    "expo-file-system": "~9.0.1",
-    "expo-font": "~8.2.1",
-    "expo-image-picker": "~8.3.0",
-    "expo-keep-awake": "~8.2.1",
-    "expo-localization": "~8.2.1",
-    "expo-permissions": "~9.0.1",
-    "expo-secure-store": "~9.0.1",
-    "expo-web-browser": "~8.3.1",
+    "expo": "^44.0.0",
+    "expo-app-loading": "^1.3.0",
+    "expo-camera": "~12.1.2",
+    "expo-cli": "^5.0.3",
+    "expo-constants": "~13.0.1",
+    "expo-file-system": "~13.1.4",
+    "expo-font": "^10.0.4",
+    "expo-image-picker": "~12.0.1",
+    "expo-keep-awake": "^10.0.1",
+    "expo-localization": "~12.0.0",
+    "expo-secure-store": "~11.1.0",
+    "expo-web-browser": "~10.1.0",
     "extract-files": "^5.0.0",
     "filesize": "^3.5.11",
     "graphql": "^14.3.1",
@@ -68,29 +71,28 @@
     "immutability-helper": "^2.6.2",
     "jest-expo": "^38.0.0",
     "lodash": "^4.17.4",
-    "metro-minify-terser": "^0.56.0",
+    "metro-minify-terser": "^0.67.0",
     "minilog": "^3.1.0",
     "native-base": "^2.13.5",
     "prop-types": "^15.6.0",
-    "react": "16.11.0",
+    "react": "17.0.2",
     "react-apollo": "^3.0.0",
     "react-debounce-input": "^3.1.0",
     "react-i18next": "^10.12.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "0.64.3",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-simple-picker": "^3.1.1",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-simple-picker": "^3.1.3",
     "react-native-swipe-list-view": "^2.0.0",
-    "react-navigation": "^3.11.1",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.1",
-    "subscriptions-transport-ws": "^0.9.16",
-    "uuid": "^3.3.2"
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@bam.tech/react-native-graphql-transformer": "^0.1.4",
@@ -108,9 +110,7 @@
     "connect": "^3.6.5",
     "cross-env": "^5.1.1",
     "eslint": "^5.16.0",
-    "exp": "^57.2.1",
     "expo-react-native-adapter": "^3.0.1",
-    "expo-yarn-workspaces": "^1.2.1",
     "freeport-async": "^1.1.1",
     "image-size": "^0.6.2",
     "jest": "^26.2.2",
