Upgrades to Expo SDK 45

--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -37,7 +37,8 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
+    "@expo-google-fonts/roboto": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
@@ -50,18 +51,18 @@
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.3",
     "apollo-upload-client": "^10.0.0",
-    "expo": "^44.0.0",
-    "expo-app-loading": "^1.3.0",
-    "expo-camera": "~12.1.2",
-    "expo-cli": "^5.0.3",
-    "expo-constants": "~13.0.1",
-    "expo-file-system": "~13.1.4",
-    "expo-font": "^10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-keep-awake": "^10.0.1",
-    "expo-localization": "~12.0.0",
-    "expo-secure-store": "~11.1.0",
-    "expo-web-browser": "~10.1.0",
+    "expo": "^45.0.0",
+    "expo-camera": "~12.2.0",
+    "expo-cli": "^5.4.3",
+    "expo-constants": "~13.1.1",
+    "expo-file-system": "~14.0.0",
+    "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-keep-awake": "~10.1.1",
+    "expo-localization": "~13.0.0",
+    "expo-secure-store": "~11.2.0",
+    "expo-splash-screen": "^0.15.1",
+    "expo-web-browser": "~10.2.0",
     "extract-files": "^5.0.0",
     "filesize": "^3.5.11",
     "graphql": "^14.3.1",
@@ -69,7 +70,7 @@
     "graphql-tag": "^2.6.0",
     "i18next": "^11.2.3",
     "immutability-helper": "^2.6.2",
-    "jest-expo": "^38.0.0",
+    "jest-expo": "^45.0.0",
     "lodash": "^4.17.4",
     "metro-minify-terser": "^0.67.0",
     "minilog": "^3.1.0",
@@ -79,16 +80,17 @@
     "react-apollo": "^3.0.0",
     "react-debounce-input": "^3.1.0",
     "react-i18next": "^10.12.2",
-    "react-native": "0.64.3",
+    "react-native": "0.68.2",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^0.19.1",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-mime-types": "^2.2.1",
     "react-native-modal": "^5.4.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-simple-picker": "^3.1.3",
+    "react-native-svg": "^12.3.0",
     "react-native-swipe-list-view": "^2.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
@@ -113,7 +115,7 @@
     "expo-react-native-adapter": "^3.0.1",
     "freeport-async": "^1.1.1",
     "image-size": "^0.6.2",
-    "jest": "^26.2.2",
+    "jest": "^26.6.3",
     "jsdom": "^11.5.1",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^16.0.0-alpha.3",
