--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
   "resolutions": {
     "card-validator": "8.1.1",
     "hard-source-webpack-plugin": "https://github.com/sysgears/hard-source-webpack-plugin",
-    "watchpack": "https://github.com/Globegitter/watchpack"
+    "watchpack": "https://github.com/Globegitter/watchpack",
+    "@react-native-picker/picker": "1.16.8"
   }
 }
