Fixes web part of the kit

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-destructuring": "^7.0.0",
     "@babel/plugin-transform-for-of": "^7.0.0",
@@ -156,7 +157,7 @@
     "qrcode-terminal": "^0.12.0",
     "raw-loader": "^0.5.1",
     "regenerator-runtime": "^0.13.2",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^10.0.0",
     "shelljs": "^0.8.1",
     "source-list-map": "^2.0.0",
     "style-loader": "^1.0.2",
