̦Switch from `yarn.lock2` to `yarn.lock` to support modern Heroku

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,15 +2,12 @@ compressionLevel: 0
 
 enableGlobalCache: true
 
-lockfileFilename: yarn2.lock
-
-nodeLinker: node-modules
 nmMode: hardlinks-local
 
+nodeLinker: node-modules
+
 plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools-848aa42b.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
 
-yarnPath: .pmm.js
+yarnPath: .pinyarn.js
