Upgrades to Webpack 5

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "src",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
+    "build": "NODE_ENV=production run -T webpack",
     "clean": "rimraf build .tmp",
     "start": "node --harmony build",
     "test": "yarn tests && yarn lint",
@@ -14,7 +14,7 @@
     "seed": "yarn migrate && knex seed:run",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "watch": "webpack --watch",
+    "watch": "webpack --watch --stats-error-details",
     "watch:android": "webpack --watch",
     "watch:ios": "webpack --watch",
     "heroku-postbuild": "yarn build && yarn seed && yarn stripe:setup",
@@ -81,7 +81,7 @@
     "excel4node": "^1.7.0",
     "express": "^4.16.2",
     "filesize": "^3.5.11",
-    "graphql": "^14.3.1",
+    "graphql": "^15.0.0",
     "graphql-auth": "0.2.6",
     "graphql-iso-date": "^3.5.0",
     "graphql-resolve-batch": "^1.0.2",
