--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
     "@loadable/webpack-plugin": "^5.7.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "autoprefixer": "^9.5.0",
+    "@webpack-cli/serve": "^1.6.1",
+    "autoprefixer": "10.4.5",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
@@ -116,10 +117,10 @@
     "babel-plugin-import": "^1.7.0",
     "babel-preset-minify": "^0.5.0-alpha.5a128fd5",
     "babel-preset-vue": "^2.0.2",
-    "clean-webpack-plugin": "^1.0.1",
+    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.1.3",
     "cross-env": "^5.1.8",
-    "css-loader": "^1.0.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.0.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
@@ -129,55 +130,49 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "file-loader": "^2.0.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.9",
-    "hard-source-webpack-plugin": "^0.13.1",
-    "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.19.0",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.11",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^1.1.2",
     "ignore-loader": "^0.1.2",
-    "isomorphic-style-loader": "^4.0.0",
+    "isomorphic-style-loader": "^5.3.2",
     "jest": "^26.2.2",
     "jest-transform-graphql": "^2.1.0",
     "jest-transform-stub": "^2.0.0",
     "lerna": "^3.4.0",
-    "less": "^3.0.2",
-    "less-loader": "^4.1.0",
+    "less": "^4.1.2",
+    "less-loader": "^11.0.0",
     "lint-staged": "^7.1.2",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-hmr-plugin": "^1.0.1",
-    "node-sass": "^6.0.1",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "openurl": "^1.1.1",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^7.0.0",
     "prettier": "^2.6.2",
-    "qrcode-terminal": "^0.12.0",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.2",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^13.0.0",
     "shelljs": "^0.8.1",
-    "source-list-map": "^2.0.0",
-    "style-loader": "^1.0.2",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2",
-    "ts-loader": "^4.5.0",
+    "source-list-map": "^2.0.1",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.57.0",
+    "stylus-loader": "^7.0.0",
+    "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^1.0.1",
-    "vue-loader": "^15.5.1",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.22",
-    "wait-on": "^3.2.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-hot-middleware": "^2.22.3",
-    "webpack-manifest-plugin": "^2.0.3",
-    "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-sources": "^1.1.0",
-    "webpack-virtual-modules": "^0.1.10",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
+    "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "wait-on": "^6.0.1",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-sources": "^3.2.3",
     "whatwg-fetch": "^2.0.4"
   },
   "dependencies": {
@@ -188,6 +183,7 @@
   "resolutions": {
     "card-validator": "8.1.1",
     "@react-native-picker/picker": "1.16.8",
-    "hard-source-webpack-plugin@0.13.1": "patch:hard-source-webpack-plugin@npm:0.13.1#.yarn/patches/hard-source-webpack-plugin-npm-0.13.1-5fa3f8bf90.patch"
+    "extract-files": "6.0.0",
+    "watchpack@2.3.1": "patch:watchpack@npm:2.3.1#.yarn/patches/watchpack-npm-2.3.1-89e7852543.patch"
   }
 }
