--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,7 @@
     "tests:watch": "jest --watch",
     "test": "yarn tests && yarn lint",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx,.json .",
-    "watch": "webpack-dev-server",
+    "watch": "run -T webpack-dev-server --stats-error-details",
     "heroku-postbuild": "yarn build",
     "cli": "node ../../tools/cli",
     "storybook": "start-storybook -p 6006",
@@ -64,13 +64,13 @@
     "apollo-logger": "^0.3.3",
     "apollo-upload-client": "^10.0.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^5.1.3",
     "connected-react-router": "^6.5.2",
     "error-stack-parser": "^2.0.1",
-    "extract-files": "^5.0.0",
+    "extract-files": "^6.0.0",
     "filesize": "^3.5.11",
     "formik": "^1.5.8",
-    "graphql": "^14.3.1",
+    "graphql": "^15.0.0",
     "graphql-iso-date": "^3.5.0",
     "graphql-tag": "^2.6.0",
     "history": "^4.7.2",
@@ -131,7 +131,6 @@
     "@types/styled-components": "^4.1.14",
     "@types/webpack-env": "^1.13.6",
     "apollo-utilities": "^1.0.3",
-    "autoprefixer": "^8.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.0",
     "chai": "^4.1.2",
@@ -146,8 +145,7 @@
     "react-test-renderer": "16.11.0",
     "request": "^2.83.0",
     "rimraf": "^2.6.2",
-    "storybook-addon-locale": "^0.3.0",
-    "webpack-cli": "^3.3.4"
+    "storybook-addon-locale": "^0.3.0"
   },
   "optionalDependencies": {
     "@expo/vector-icons": "^13.0.0",
