--- a/package.json
+++ b/package.json
@@ -183,7 +183,6 @@
   "resolutions": {
     "card-validator": "8.1.1",
     "@react-native-picker/picker": "1.16.8",
-    "extract-files": "6.0.0",
-    "watchpack@2.3.1": "patch:watchpack@npm:2.3.1#.yarn/patches/watchpack-npm-2.3.1-89e7852543.patch"
+    "extract-files": "6.0.0"
   }
 }
