--- a/package.json
+++ b/package.json
@@ -145,13 +145,13 @@
     "lint-staged": "^7.1.2",
     "mini-css-extract-plugin": "^2.6.0",
     "node-hmr-plugin": "^1.0.1",
-    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "openurl": "^1.1.1",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.6.2",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.2",
+    "sass": "^1.62.1",
     "sass-loader": "^13.0.0",
     "shelljs": "^0.8.1",
     "source-list-map": "^2.0.1",
