--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         ssh-keyscan -p 8222 -H ausk.sysgears.com > ~/.ssh/known_hosts
         ssh node@ausk.sysgears.com -p 8222 '
+        source ~/.profile
         DIR=$(mktemp -u ausk.XXXXXXXX)
         git clone --depth 1 https://github.com/sysgears/apollo-universal-starter-kit $DIR
         cd $DIR
