Fixes cleanup algo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
         killall node
         nohup yarn start > nohup.out 2> nohup.err < /dev/null &
         cd ..
-        ls ausk.* | grep -v $DIR | xargs rm -rf
+        ls | grep -v $DIR | xargs rm -rf
         '
